test/error/LexLiteralDecTrailingUnderscore.fu
public static class Test
{
	public static bool Run()
	{
		return 5_ == 5; //ERROR: Invalid integer
	}
}
